<resources>
    <string name="app_name"> Daser </string>
    <string name="title_activity_logon">Logon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="accountname">Swami P</string>
    <string name="profile">My Account</string>
    <string name="appointments">Appointments</string>
    <string name="Schedule">Schedule Appointments</string>
    <string name="cpassword">Change Password</string>
    <string name="help">Help</string>
    <string name="Logout">Logout</string>
    <string name="addr"> <u>Change Address</u> </string>
    <string name="servicename">Service Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
