<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/apps"
            android:title="@string/appointments" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/format_float_left"
            android:title="@string/Schedule" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/sync"
            android:title="@string/cpassword" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_network"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />

    </group>
    <!--
        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/send" />
            </menu>
        </item>
    -->
</menu>
